--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,3 +70,11 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+#Assectic Configuration
+assetic:
+    bundles:        [TodoListBundle ]
+    debug:          '%kernel.debug%'
+    use_controller: false
+    filters:
+        cssrewrite: ~
