--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,33 @@
 # Created by .ignore support plugin (hsz.mobi)
+
+/web/bundles/
+/app/bootstrap.php.cache
+/var/*
+!/var/cache
+/var/cache/*
+!var/cache/.gitkeep
+!/var/logs
+/var/logs/*
+!var/logs/.gitkeep
+!/var/sessions
+/var/sessions/*
+!var/sessions/.gitkeep
+!var/SymfonyRequirements.php
+/vendor/
+/app/config/parameters.yml
+/app/phpunit.xml
+/build/
+/bin/*
+!bin/console
+!bin/symfony_requirements
+/composer.phar
+.idea/
+/web/bundles/
+/nbproject/
+app/SymfonyRequirements.php
+bin/security-checker
+composer.lock
+web/css/
+web/js/
+web/fonts/
+logs/
